--- a/grade.css
+++ b/grade.css
@@ -84,7 +84,7 @@
     color: cadetblue;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 850px) {
     .details .detail {
         flex-direction: column;
         text-align: center;
@@ -106,10 +106,13 @@
         font-size: 2rem;
     }
     .greet-para{
-        font-size: large !important;
+        font-size: larger !important;
     }
+  
 }
 
+    
+}
 @media screen and (max-width: 430px) {
     .section1 .head-content {
         font-size: 1.5rem;
@@ -140,36 +143,37 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    padding: 0.5rem;
 }
 
 .gpa-btn,
 .greet-btn,
 .greet-para {
     padding: 1rem 2rem;
-    background-color: green;
+    background-color: rgb(127, 241, 245);
     color: white;
     border-radius: 1rem;
     border: 2px solid black;
 }
 .greet-btn {
     background-color: burlywood;
-    padding: 1rem 10rem;
-    font-size: x-large;
-
+    padding: 1rem 3rem;
+    /* min-width: min-content; */
 }
+
 .greet-btn:active {
     transform: scale(0.98, 0.98);
 }
 .sgpa {
-    padding: 0.9rem 2.5rem;
+    padding: 0.9rem 2rem;
+    text-align: center;
     background-color: floralwhite;
     color: black;
     border-radius: 1rem;
     border: 2px solid black;
 }
 .greet-para{
-    font-size: x-large;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .greet-para,
@@ -177,9 +181,25 @@
 .sgpa {
     display: none;
 }
+.gpa-btn, .sgpa, .greet-btn, .greet-para {
+    min-width: min-content;
+    text-align: center;
+}
+
+section {
+    border: 2px solid greenyellow;
+}
+.section > * {
+
+    border: 2px solid red;
+}
+
 .content1 {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+}
+.content2 {
+    display: none;
 }
