--- a/grade.css
+++ b/grade.css
@@ -7,30 +7,24 @@
 .page2 {
     max-width: 1280px;
     margin-inline: auto;
-    /* border: 2px solid red; */
 }
 
 .page2 .all-data {
     padding: 1rem;
-    /* border: 2px solid rgb(55, 99, 232); */
     max-width: 980px;
     margin-inline: auto;
 }
 
 .page2 .all-data .sec {
-    /* border: 2px solid green; */
-    /* margin-block-end: 1rem; */
     max-width: 800px;
     margin-inline: auto;
 }
 
 .section1 .head-content {
-    /* border: 2px solid black; */
     text-align: center;
     font-size: 3rem;
     max-width: 650px;
     margin-inline: auto;
-    /* margin-block-end: 2rem; */
 }
 
 .section2 {
@@ -38,7 +32,6 @@
 }
 
 .section2 .details {
-    /* border: 2px solid black; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -58,11 +51,9 @@
     background-color: rgb(212, 248, 249);
     border-radius: 25px;
     border: none;
-
 }
 
 .details .detail .sub {
-    /* border: 2px solid red; */
     padding: 0.5rem;
 }
 
@@ -111,27 +102,20 @@
   
 }
 
-    
-
 @media screen and (max-width: 430px) {
     .section1 .head-content {
         font-size: 1.5rem;
-        /* margin-block-end: 0.5rem; */
     }
-
-
 }
 
 @media screen and (max-width: 302px) {
     .section1 .head-content {
         font-size: 1.2rem;
-        /* margin-block-end: 0.1rem; */
     }
     .content1 {
         flex-direction: column;
     }
 }
-
 
 .section .content1 .gpa-btn:active {
     transform: scale(0.98, 0.98);
@@ -155,15 +139,15 @@
     border-radius: 1rem;
     border: 2px solid black;
 }
-.greet-btn {
-    background-color: burlywood;
-    padding: 1rem 3rem;
-    /* min-width: min-content; */
+
+.gpa-btn {
+    color: black;
 }
 
 .greet-btn:active {
     transform: scale(0.98, 0.98);
 }
+
 .sgpa {
     padding: 0.9rem 2rem;
     text-align: center;
@@ -173,19 +157,19 @@
     border: 2px solid black;
 }
 
-
 .greet-para,
 .greet-btn,
 .sgpa {
     display: none;
 }
-.gpa-btn, .sgpa, .greet-btn, .greet-para {
+
+.gpa-btn,
+.sgpa,
+.greet-btn,
+.greet-para {
     min-width: min-content;
     text-align: center;
 }
-
-
-
 
 .content1 {
     display: flex;
@@ -193,6 +177,7 @@
     justify-content: center;
     gap: 1rem;
 }
+
 .content2 {
     display: none;
 }
