--- a/grade.css
+++ b/grade.css
@@ -13,11 +13,13 @@
     padding: 1rem;
     max-width: 980px;
     margin-inline: auto;
+    /* border: 2px solid teal; */
 }
 
 .page2 .all-data .sec {
     max-width: 800px;
     margin-inline: auto;
+    /* border: 2px solid black; */
 }
 
 .section1 .head-content {
@@ -25,6 +27,7 @@
     font-size: 3rem;
     max-width: 650px;
     margin-inline: auto;
+    /* border: 2px solid red; */
 }
 
 .section2 {
@@ -39,6 +42,7 @@
     gap: 1rem;
     max-width: 600px;
     margin-inline: auto;
+    /* border: 2px solid red; */
 }
 
 .details .detail {
@@ -96,10 +100,11 @@
     .section1 .head-content {
         font-size: 2rem;
     }
-    .greet-para{
+
+    .greet-para {
         font-size: larger !important;
     }
-  
+
 }
 
 @media screen and (max-width: 430px) {
@@ -112,26 +117,27 @@
     .section1 .head-content {
         font-size: 1.2rem;
     }
+
     .content1 {
         flex-direction: column;
     }
 }
 
-.section .content1 .gpa-btn:active {
+.section3 .content1 .gpa-btn:active {
     transform: scale(0.98, 0.98);
 }
 
-.section {
+.section3 {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
     padding: 0.5rem;
+    /* margin-block-end: 5rem; */
 }
 
 .gpa-btn,
-.greet-btn,
 .greet-para {
     padding: 1rem 2rem;
     background-color: rgb(127, 241, 245);
@@ -176,8 +182,107 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    /* border: 2px solid red; */
 }
 
 .content2 {
+    /* border: 2px solid red; */
     display: none;
+}
+
+.section4 {
+    /* background-color: cadetblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-block: 1rem;
+}
+
+.section4 .foot-content {
+    /* border: 2px solid red; */
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: white;
+    padding: 1rem;
+}
+
+.section4 .foot-content>* {
+    /* border: 2px solid greenyellow; */
+    text-align: center;
+    padding: 1rem;
+}
+
+.query-portion .query-form .query-head {
+    color: darkcyan;
+    font-size: 25px;
+    margin-block-end: 1.5rem;
+}
+
+.contact .logo {
+    max-width: fit-content;
+    /* text-align: center; */
+    margin-inline: auto;
+    padding: 0.5rem 1rem;
+    border-radius: 0.4rem;
+    background-color: black;
+    color: white;
+    /* border: 2px solid darkcyan; */
+    font-size: 25px;
+    margin-block-end: 1.5rem;
+}
+
+.query-form .query-input {
+
+    /* margin: 1rem; */
+}
+
+.query-form .flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.query-form .flex .query-input {
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.query-form .flex .query-button {
+    padding: 1rem 2rem;
+    background-color: #00B6D1;
+    color: white;
+    font-weight: 700;
+    border-radius: 0.5rem;
+
+}
+
+.query-form .flex .query-button:active {
+    transform: scale(0.98, 0.98);
+}
+
+.contact .footer-links {
+    margin-block-end: 0.5rem;
+}
+
+.contact .copyright {
+    font-size: small;
+}
+
+@media screen and (max-width: 690px) {
+    .section4 .foot-content {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .query-form .flex {
+        flex-direction: column;
+    }
+    .query-form .flex .query-button {
+        padding: 0.5rem 1.5rem;
+    }
 }
