--- a/percentage.css
+++ b/percentage.css
@@ -27,13 +27,13 @@
 .section1 .head-content {
     /* border: 2px solid black; */
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
     max-width: 650px;
     margin-inline: auto;
 }
 
 .section2 {
-    padding: 1rem;
+    /* padding: 1rem; */
 }
 
 .section2 .details {
@@ -94,6 +94,9 @@
     .details .detail {
         padding: 1rem;
     }
+    .section1 .head-content {
+        font-size: 2.5rem;
+    }
 }
 @media screen and (max-width: 430px) {
     .section1 .head-content {
@@ -103,7 +106,7 @@
 }
 @media screen and (max-width: 302px) {
     .section1 .head-content {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
     }
 }
 
@@ -128,4 +131,130 @@
     padding: 0.9rem 2rem;
     margin-inline-start: 1rem;
     border-radius: 14px;
+}
+
+
+
+
+
+.section4 {
+    /* background-color: cadetblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-block: 1rem;
+    /* border: 2px solid red; */
+}
+
+.section4 .foot-content {
+    /* border: 2px solid black; */
+    margin: 1rem;
+    background-color: white;
+    padding: 1rem;
+    width: 100%;
+}
+
+
+.section4 .foot-content .query-portion {
+    background-color: #2f2f2f;
+    text-align: center;
+    padding: 1rem;
+}
+.section4 .foot-content .contact {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-block-start: 2rem;
+    /* padding-block: 1rem; */
+}
+
+.query-portion .query-form .query-head {
+    color: #00B6D1;
+    font-size: 25px;
+    margin-block-end: 0.5rem;
+}
+.query-portion .query-form .query-minihead {
+    color: white;
+    font-size: smaller;
+    
+}
+
+.contact .logo-link {
+    /* max-width: fit-content; */
+    /* text-align: center; */
+    /* margin-inline: auto; */
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.2rem;
+    background-color: black;
+    color: white;
+    /* border: 2px solid darkcyan; */
+    font-size: 16px;
+    /* margin-block-end: 1.5rem; */
+}
+
+
+
+
+.query-form .flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.query-form .flex .query-input {
+    padding: 1rem;
+    border-radius: 0.5rem;
+    width: 70%;
+    margin-block-start: 1rem;
+}
+
+.query-form .flex .query-button {
+    padding-block: 1rem ;
+    width: 70%;
+    background-color: #00B6D1;
+    color: white;
+    font-weight: 700;
+    border-radius: 0.5rem;
+    cursor: pointer;
+
+}
+
+.query-form .flex .query-button:active {
+    transform: scale(0.98, 0.98);
+}
+
+
+
+.footer-links span {
+    display: inline-block;
+    width: 30px;
+}
+.footer-links span .contact-link {
+    display: block;
+}
+.footer-links span img {
+    width: 100%;
+    display: block;
+    
+}
+
+.foot-content .copyright {
+    font-size: small;
+    margin-block-start: 1rem;
+    
+}
+
+@media screen and (max-width: 430px) {
+    .contact {
+       flex-direction: column;
+       gap: 0.5rem;
+    }
+    .foot-content .copyright {
+        text-align: center;
+        margin-block-start: 0.5rem;
+        
+    }
 }
