--- a/percentage.css
+++ b/percentage.css
@@ -254,3 +254,10 @@
         
     }
 }
+
+@media screen and (max-width: 560px) {
+    .query-portion .query-form .query-minihead {
+        color: white;
+        font-size: smaller;
+    }
+}
