--- a/percentage.css
+++ b/percentage.css
@@ -4,37 +4,40 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: whitesmoke;
+}
+
 .page2 {
     max-width: 1280px;
     margin-inline: auto;
-    /* border: 2px solid red; */
 }
 
 .page2 .all-data {
     padding: 1rem;
-    /* border: 2px solid rgb(55, 99, 232); */
     max-width: 980px;
     margin-inline: auto;
 }
 
 .page2 .all-data .sec {
-    /* border: 2px solid green; */
-    margin-block-end: 1rem;
     max-width: 800px;
     margin-inline: auto;
+    background-color: white;
 }
 
 .section1 .head-content {
-    /* border: 2px solid black; */
     text-align: center;
     font-size: 2.5rem;
     max-width: 650px;
     margin-inline: auto;
+    padding-block-start: 1rem;
 }
 
+.section2 {
+    padding: 1rem;
+}
 
 .section2 .details {
-    /* border: 2px solid black; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -46,23 +49,22 @@
 }
 
 .details .detail {
-    /* border: 2px solid rgb(7, 116, 224); */
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
     gap: 5px;
     background-color: rgb(212, 248, 249);
     border-radius: 25px;
+    padding: 1rem;
+    text-align: center;
     
 }
 
 .details .detail .sub {
-    /* border: 2px solid red; */
-    padding: 0.5rem;
+    padding: 0.3rem;
 }
-
-
 
 .details .detail .sub-detail3 input {
     width: 100%;
@@ -72,36 +74,33 @@
     text-align: center;
     cursor: pointer;
 }
+
 .details .detail .sub-detail3 input::placeholder {
    text-align: center;
    color: cadetblue;
 }
 
 @media screen and (max-width: 656px) {
-    .details .detail {
-        flex-direction: column;
-        text-align: center; 
-    }
     .details .detail .sub-detail2 {
         min-width: auto;
     } 
-    .details .detail .sub {
-        padding: 0.2rem;
-    }
+    
     .details .detail {
         padding: 1rem;
     }
+
     .section1 .head-content {
         font-size: 2.5rem;
     }
 }
+
 @media screen and (max-width: 430px) {
     .section1 .head-content {
         font-size: 2rem;
     }
-
 }
-@media screen and (max-width: 302px) {
+
+@media screen and (max-width: 350px) {
     .section1 .head-content {
         font-size: 1.6rem;
     }
@@ -109,16 +108,17 @@
 
 .section3 {
     text-align: center;
+    padding-block-start: 1rem ;
 }
+
 .section3 .btn {
     padding: 0.9rem 2rem;
     color: floralwhite;
     background-color: darkcyan;
     border-radius: 14px;
-    cursor: pointer;
-
-    
+    cursor: pointer;   
 }
+
 .section3 .btn:active {
     padding: 0.87rem 1.97rem;
 }
@@ -130,39 +130,31 @@
     border-radius: 14px;
 }
 
-
-
-
-
 .section4 {
-    /* background-color: cadetblue; */
     display: flex;
     justify-content: center;
     align-items: center;
     padding-block: 1rem;
-    /* border: 2px solid red; */
 }
 
 .section4 .foot-content {
-    /* border: 2px solid black; */
     margin: 1rem;
-    background-color: white;
+    background-color: whitesmoke;
     padding: 1rem;
     width: 100%;
 }
 
-
 .section4 .foot-content .query-portion {
     background-color: #2f2f2f;
     text-align: center;
-    padding: 3rem;
+    padding: 2rem;
 }
+
 .section4 .foot-content .contact {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-block-start: 2rem;
-    /* padding-block: 1rem; */
 }
 
 .query-portion .query-form .query-head {
@@ -170,27 +162,20 @@
     font-size: 25px;
     margin-block-end: 0.5rem;
 }
+
 .query-portion .query-form .query-minihead {
     color: white;
     font-size: smaller; 
 }
 
 .contact .logo-link {
-    /* max-width: fit-content; */
-    /* text-align: center; */
-    /* margin-inline: auto; */
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 0.2rem;
     background-color: black;
     color: white;
-    /* border: 2px solid darkcyan; */
     font-size: 16px;
-    /* margin-block-end: 1.5rem; */
 }
-
-
-
 
 .query-form .flex {
     display: flex;
@@ -215,32 +200,29 @@
     font-weight: 700;
     border-radius: 0.5rem;
     cursor: pointer;
-
 }
 
 .query-form .flex .query-button:active {
     transform: scale(0.98, 0.98);
 }
 
-
-
 .footer-links span {
     display: inline-block;
     width: 30px;
 }
+
 .footer-links span .contact-link {
     display: block;
 }
+
 .footer-links span img {
     width: 100%;
-    display: block;
-    
+    display: block; 
 }
 
 .foot-content .copyright {
     font-size: small;
-    margin-block-start: 1rem;
-    
+    margin-block-start: 1rem; 
 }
 
 @media screen and (max-width: 430px) {
@@ -248,10 +230,10 @@
        flex-direction: column;
        gap: 0.5rem;
     }
+
     .foot-content .copyright {
         text-align: center;
-        margin-block-start: 0.5rem;
-        
+        margin-block-start: 0.5rem; 
     }
 }
 
