--- a/grade.css
+++ b/grade.css
@@ -43,7 +43,7 @@ body {
     align-items: flex-start;
     justify-content: center;
     gap: 1rem;
-    max-width: 600px;
+    max-width: 650px;
     margin-inline: auto;
 }
 
@@ -63,9 +63,12 @@ body {
     padding: 0.5rem;
 }
 
+.details .detail .sub-detail2 {
+    min-width: 296px;
+}
 .details .detail .sub-detail3 input {
     width: 100%;
-    height: 30px;
+    height: 35px;
     border: none;
     border-radius: 20px;
     text-align: center;
@@ -231,12 +234,13 @@ body {
 }
 
 .contact .logo-link {
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-radius: 0.2rem;
-    background-color: black;
-    color: white;
-    font-size: 16px;
+    width: 70px;
+    border-radius: 5px;
+}
+.contact .logo-link .logo-image {
+    width: 100%;
+    display: block;
+    border-radius: 5px;
 }
 
 .query-form .flex {
