--- a/percentage.css
+++ b/percentage.css
@@ -169,12 +169,13 @@ body {
 }
 
 .contact .logo-link {
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-radius: 0.2rem;
-    background-color: black;
-    color: white;
-    font-size: 16px;
+    width: 70px;
+    border-radius: 5px;
+}
+.contact .logo-link .logo-image {
+    width: 100%;
+    display: block;
+    border-radius: 5px;
 }
 
 .query-form .flex {
