--- a/percentage.css
+++ b/percentage.css
@@ -172,6 +172,10 @@ body {
     width: 70px;
     border-radius: 5px;
 }
+
+.logo.logo-link {
+    display: block;
+}
 .contact  .logo .logo-link .logo-image {
     width: 100%;
     display: block;
