--- a/grade.css
+++ b/grade.css
@@ -237,9 +237,9 @@ body {
     font-size: smaller;
 }
 
-.contact .logo  {
+/* .contact .logo  {
     max-width: 70px;
-    /* border-radius: 5px; */
+    border-radius: 5px;
 }
 .logo .logo-link{
     width: 100%;
@@ -248,9 +248,9 @@ body {
 .contact .logo .logo-link .logo-image {
     width: 100%;
     display: block;
-    /* border-radius: 5px; */
-    /* object-fit: contain; */
-}
+    border-radius: 5px;
+    object-fit: contain;
+} */
 
 .query-form .flex {
     display: flex;
@@ -301,18 +301,18 @@ body {
 
 .foot-content .copyright {
     font-size: small;
-    margin-block-start: 1rem;
+    /* margin-block-start: 1rem; */
 }
 
 @media screen and (max-width: 430px) {
     .contact {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 0.5rem;
     }
 
     .foot-content .copyright {
         text-align: center;
-        margin-block-start: 0.5rem;
+        /* margin-block-start: 0.5rem; */
     }
 }
 
