--- a/percentage.css
+++ b/percentage.css
@@ -108,36 +108,49 @@ body {
 
 .section3 {
     text-align: center;
-    padding-block-start: 1rem ;
+    padding: 0.5rem;
 }
 
-.section3 .btn {
+.btn {
     padding: 0.9rem 2rem;
     color: floralwhite;
     background-color: rgb(0, 139, 139);
     border-radius: 14px;
-    cursor: pointer;   
+    cursor: pointer;
+}
+.percent-btn {
+    margin-inline-end: 0.5rem;
 }
 
-.section3 .btn:hover {
+@media screen and (max-width: 335px) {
+    .percent-btn {
+        margin-block-end: 0.5rem;
+        margin-inline-end: 0rem;
+
+    }
+}
+
+.section3 .percent-btn .btn:hover {
     background-color: rgba(0, 139, 139, 0.8);
 }
-.section3 .btn:active {
+.section3 .percent-btn .btn:active {
     transform: scale(0.97, 0.97);
 }
 
-.section3 .result {
+.result {
     border: 2px solid black;
     padding: 0.9rem 2rem;
-    margin-inline-start: 1rem;
+    margin-block-start: 0.5rem;
     border-radius: 14px;
+    max-width: 150px;
+    margin-inline: auto
 }
 
 .section4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-block: 1rem;
+    padding-block-end: 1rem;
 }
 
 .section4 .foot-content {
