--- a/percentage.css
+++ b/percentage.css
@@ -109,6 +109,7 @@ body {
 .section3 {
     text-align: center;
     padding: 0.5rem;
+    border: 2px solid;
 }
 
 .btn {
@@ -133,8 +134,21 @@ body {
 .section3 .percent-btn .btn:hover {
     background-color: rgba(0, 139, 139, 0.8);
 }
+
 .section3 .percent-btn .btn:active {
     transform: scale(0.97, 0.97);
+}
+
+.section3 .proof {
+    border: 2px solid red;
+    max-width: 80%;
+    margin-inline: auto;
+    margin-block-start: 1rem;
+}
+
+.proof .formula-img {
+    width: 100%;
+    display: block;
 }
 
 .result {
