--- a/grade.css
+++ b/grade.css
@@ -166,6 +166,12 @@ body {
     border: 2px solid black;
 }
 
+@media screen and (max-width: 400px) {
+    .greet-para {
+        padding: 1rem 1rem;
+    }
+}
+
 .sgpa {
     padding: 0.9rem 2rem;
     text-align: center;
