--- a/percentage.css
+++ b/percentage.css
@@ -55,11 +55,18 @@ body {
     align-items: center;
     width: 100%;
     gap: 5px;
-    background-color: rgb(212, 248, 249);
+    border: 5px double white;
     border-radius: 25px;
     padding: 1rem;
     text-align: center;
-    
+}
+
+.details .detail:nth-of-type(2n+1) {
+    background-color: rgb(161, 251, 254);
+}
+
+.details .detail:nth-of-type(2n) {
+    background-color: rgb(100 226 237)
 }
 
 .details .detail .sub {
